# symnav-bench

./: .gitignore  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: publish.yml
src/symnav_bench/: agent_integrations.py  batch_plan.py  build_identity.py  cell_identity.py  cli.py  container_registry.py  dataset_fetch.py  deepswe.py  pier_patches.py  run_spec.py  study.py  suite.py  tasks.py  workflow.py
src/symnav_bench/agents/: __init__.py  claude.py  codex.py  directives.py  install.py  pier_compat.py
src/symnav_bench/benchmark_sources/: __init__.py  deepswe_source.py  multi_swe_bench_source.py  pier_task_writer.py  swe_polybench_source.py
src/symnav_bench/cells/: __init__.py  attempt.py  cell.py  legacy.py  normalize.py  trajectory.py
src/symnav_bench/dashboard/: __init__.py
src/symnav_bench/report/: attempt_view.py  cell_set.py  chart_data.py  (+11 more)
tests/: dashboard_state.test.mjs  test_agent_integrations.py  test_agents.py  test_attempt.py  test_attempt_view.py  test_batch_plan.py  test_benchmark_sources.py  test_build_identity.py  test_container_registry.py  test_dashboard_payload.py  test_dataset_fetch.py  test_entrypoint.py  test_exports.py  test_materializer.py  test_multi_swe_grading.py  test_multi_swe_source.py  test_normalize.py  test_official_reference.py  test_pier_patches.py  test_polybench_grading.py  test_polybench_source.py  test_report.py  test_run.py  test_run_spec.py  test_statistics.py  test_study.py  test_study_dataset.py  test_suite.py  test_tasks_cli.py  test_trajectory.py  test_versions.py  test_workflow.py
(+17 files in other folders)
